# vps-guardian

./: .dockerignore  .env.example  .gitattributes  .gitignore  .gitleaks.toml  CHANGELOG.md  CONTRIBUTING.md  README.md  README.zh-CN.md  RELEASE_NOTES.md  RELEASE_NOTES_v0.2.0-alpha.1.md  RELEASE_NOTES_v0.2.0-alpha.1.zh-CN.md  RELEASE_NOTES_v0.3.0-alpha.1.md  RELEASE_NOTES_v0.3.0-alpha.1.zh-CN.md  SECURITY.md  THIRD_PARTY_NOTICES.md  docker-compose.yml  pyproject.toml  requirements-build.in
agent/: actions.go  actions_test.go  client.go  client_test.go  config.go  config_test.go  go.mod  identity.go  identity_test.go  main.go  metrics.go  metrics_linux.go  metrics_other.go  probes.go  protocol.go  protocol_test.go  queue.go  queue_test.go  remote_checks.go  remote_checks_test.go  util.go
controller/: alembic.ini
deploy/: Caddyfile  agent-config.example.json  agent-gateway-entrypoint.sh  agent-gateway.haproxy.cfg  controller-entrypoint.sh  controller.Dockerfile  postgres.Dockerfile  production.compose.yml  production.env.example  restic-s3.compose.yml  web.Dockerfile
docs/: AGENT_INSTALLATION.md  ARCHITECTURE.md  BACKUP_AND_RESTORE.md  QUICKSTART.md  RELEASE_NOTES_v0.1.0-alpha.2.md  trust-material-v2.schema.json
runbooks/: cleanup_allowlisted_cache.yaml  reload_valid_caddy.yaml  restart_exited_container.yaml  restart_unhealthy_container.yaml  restore_database.yaml  restricted_cache_cleanup.yaml  rollback_caddy_config.yaml  rollback_recent_service.yaml
scripts/: atomic-directory-switch.py  build-release.sh  generate-controller-secrets.sh  install-agent.sh  install-controller.sh  issue-agent-certificate.sh  lifecycle-journal.py  pki-init.sh  prepare-compose-secrets.sh  publish-agent-crl.sh  recover-controller-lifecycle.sh  release-manifest.py  revoke-agent-certificate.sh  rollback-controller.sh  run-backup-command.sh  run-compose-backup.sh  run-systemd-backup.sh  systemd-backup-markers.py  uninstall-agent.sh  upgrade-controller.sh
tests/: conftest.py  test_acceptance_scenarios.py  test_agent_identity_postgres.py  test_agent_lifecycle.py  test_agent_security.py  (+35 more)
(+112 files in other folders)
